# JSONL-Viewer

./: .gitignore  README.md  pyproject.toml  test.jsonl  viewer.py
